--- a/package.json
+++ b/package.json
@@ -6,9 +6,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "lint-staged": {
+    "*.js": [
+      "standard --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "standard": "^17.0.0"
   }
 }
